Desktop entry fix

--- a/day-night-plasma-wallpapers.desktop
+++ b/day-night-plasma-wallpapers.desktop
@@ -2,5 +2,6 @@
 Name=Day-night-plasma-wallpapers
 Comment=Updates to Day/Night wallpaper
 Exec=/bin/update-day-night-plasma-wallpapers.sh
+Type=Application
 StartupNotify=false
 Terminal=false
